--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,17 +1,28 @@
-.playground{
-    width:50%;
-    height:50%;
-    margin: auto;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body html .root {
-    height: 100%;
+.App {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
-.ball{
-    background-color: black;
-    box-shadow: 0 10px 10px -6px;
-    position: relative;
-    right: 0px;
-    height: 50px;
-    width: 50px;
-    border-radius: 25px;
+
+.start {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.ball {
+  position: relative;
+  top: 50%;
+  left: 0;
+  width: 30px;
+  height: 30px;
+  background-color: red;
+  border-radius: 50%;
 }
